Change avatar to custom image img/img.png

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -470,7 +470,7 @@ html {
 <body>
 <div class="container">
   <div class="avatar-container">
-    <img src="https://i.pravatar.cc/150?img=12" alt="Аватар">
+    <img src="img/img.png" alt="Аватар">
   </div>
   
   <h1>✨ Партнерские ссылки</h1>
