Force avatar cache refresh with version parameter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -470,7 +470,7 @@ html {
 <body>
 <div class="container">
   <div class="avatar-container">
-    <img src="img/img.png" alt="Аватар">
+    <img src="img/img.png?v=2" alt="Аватар">
   </div>
   
   <h1>✨ Партнерские ссылки</h1>
