Force GitHub Pages rebuild for avatar image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -473,8 +473,8 @@ html {
     <img src="img/img.png?v=2" alt="Аватар">
   </div>
   
-  <h1>✨ Партнерские ссылки</h1>
-  
+  <h1>✨ Уникальные предложения</h1>
+  <h2>От наших партнёров</h2>
   <div id="categories"></div>
   
   <button id="adminBtn" class="modern-btn gradient-btn">⚙️ Админ-панель</button>
