--- a/frontend/index.html
+++ b/frontend/index.html
@@ -296,6 +296,7 @@ h2 {
   z-index: 999999;
   animation: slideUp 0.5s ease;
   box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5), 0 0 40px rgba(255, 0, 0, 0.3);
+  overflow: hidden;
 }
 
 #cookieConsent.hidden {
@@ -310,6 +311,7 @@ h2 {
   justify-content: space-between;
   gap: 20px;
   flex-wrap: wrap;
+  overflow: visible;
 }
 
 .cookie-text {
@@ -318,6 +320,7 @@ h2 {
   color: var(--text-secondary);
   font-size: 0.9rem;
   line-height: 1.4;
+  overflow: visible;
 }
 
 .cookie-text strong {
