--- a/frontend/index.html
+++ b/frontend/index.html
@@ -201,11 +201,12 @@ h2 {
 .modern-btn .btn-logo {
   width: 32px;
   height: 32px;
-  object-fit: contain;
+  object-fit: cover;
   filter: brightness(1.3) contrast(1.2) saturate(1.1);
   transition: transform 0.3s ease, filter 0.3s ease;
   mix-blend-mode: screen;
   background: transparent;
+  border-radius: 50%;
   /* Удаление белого фона */
   -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,1));
 }
@@ -219,6 +220,11 @@ h2 {
 .modern-btn:hover .btn-logo {
   transform: scale(1.15) rotate(5deg);
   filter: brightness(1.5) contrast(1.3) saturate(1.2);
+}
+
+.logo-wrapper {
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .modern-btn::before {
