--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Favicons -->
-<link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
-<link rel="manifest" href="img/favicon/site.webmanifest">
+<link rel="shortcut icon" type="image/x-icon" href="./img/favicon/favicon.ico">
+<link rel="icon" type="image/x-icon" href="./img/favicon/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="./img/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="./img/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="./img/favicon/site.webmanifest">
+<meta name="theme-color" content="#000000">
+<meta name="msapplication-TileColor" content="#FF0000">
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
