--- a/frontend/presentation.html
+++ b/frontend/presentation.html
@@ -62,6 +62,12 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 3px;
+  animation: pulse 2s ease-in-out infinite;
+}
+
+@keyframes pulse {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.02); }
 }
 
 .subtitle {
@@ -79,6 +85,20 @@ h2 {
   margin: 50px 0 25px;
   text-transform: uppercase;
   letter-spacing: 2px;
+  text-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+  position: relative;
+  padding-bottom: 15px;
+}
+
+h2::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 60px;
+  height: 4px;
+  background: linear-gradient(90deg, var(--brutal-red) 0%, transparent 100%);
+  border-radius: 2px;
 }
 
 h3 {
@@ -136,10 +156,18 @@ hr {
 
 .highlight-box {
   background: rgba(255, 0, 0, 0.15);
+  backdrop-filter: blur(10px);
   border-left: 4px solid var(--brutal-red);
   padding: 20px 25px;
   margin: 30px 0;
   border-radius: 8px;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.3);
+  animation: glow 3s ease-in-out infinite;
+}
+
+@keyframes glow {
+  0%, 100% { box-shadow: 0 0 20px rgba(255, 0, 0, 0.3); }
+  50% { box-shadow: 0 0 30px rgba(255, 0, 0, 0.5); }
 }
 
 .cta-section {
@@ -148,6 +176,31 @@ hr {
   border-radius: 15px;
   padding: 40px;
   margin: 50px 0;
+  border: 2px solid var(--brutal-red);
+  box-shadow: 0 10px 40px rgba(255, 0, 0, 0.5), 0 0 60px rgba(255, 0, 0, 0.3);
+  position: relative;
+  overflow: hidden;
+}
+
+.cta-section::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(
+    45deg,
+    transparent,
+    rgba(255, 255, 255, 0.1),
+    transparent
+  );
+  animation: shimmer 3s infinite;
+}
+
+@keyframes shimmer {
+  0% { transform: translateX(-100%) translateY(-100%) rotate(45deg); }
+  100% { transform: translateX(100%) translateY(100%) rotate(45deg); }
 }
 
 .cta-button {
@@ -162,12 +215,34 @@ hr {
   letter-spacing: 2px;
   transition: all 0.3s ease;
   margin-top: 20px;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+}
+
+.cta-button::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: rgba(255, 215, 0, 0.3);
+  transform: translate(-50%, -50%);
+  transition: width 0.5s, height 0.5s;
+  z-index: -1;
+}
+
+.cta-button:hover::before {
+  width: 300px;
+  height: 300px;
 }
 
 .cta-button:hover {
   background: #FFD700;
-  transform: translateY(-3px);
-  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.4);
+  transform: translateY(-5px) scale(1.05);
+  box-shadow: 0 15px 40px rgba(255, 255, 255, 0.6);
   color: #000000;
   text-shadow: none;
 }
@@ -190,7 +265,7 @@ hr {
   position: absolute;
   left: 0;
   top: 0;
-  background: var(--brutal-red);
+  background: linear-gradient(135deg, var(--brutal-red) 0%, #8B0000 100%);
   color: #ffffff;
   width: 40px;
   height: 40px;
@@ -200,6 +275,8 @@ hr {
   justify-content: center;
   font-weight: 900;
   font-size: 1.2rem;
+  box-shadow: 0 4px 15px rgba(255, 0, 0, 0.5);
+  border: 2px solid rgba(255, 0, 0, 0.3);
 }
 
 .benefit-grid {
@@ -210,17 +287,35 @@ hr {
 }
 
 .benefit-card {
-  background: rgba(255, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(10px);
   border: 2px solid rgba(255, 0, 0, 0.3);
   border-radius: 15px;
   padding: 25px;
   transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.benefit-card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 0, 0, 0.1), transparent);
+  transition: left 0.5s;
+}
+
+.benefit-card:hover::before {
+  left: 100%;
 }
 
 .benefit-card:hover {
   transform: translateY(-5px);
   border-color: var(--brutal-red);
-  box-shadow: 0 10px 30px rgba(255, 0, 0, 0.4);
+  box-shadow: 0 10px 30px rgba(255, 0, 0, 0.6), 0 0 40px rgba(255, 0, 0, 0.3);
 }
 
 .back-link {
