Update cookie consent text for better grammar and flow

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -842,9 +842,9 @@ html {
   <div class="cookie-box">
     <div class="cookie-icon">🍪</div>
     <div class="cookie-text">
-      Мы используем cookies для улучшения вашего опыта и аналитики.<br>
-      <a href="./policy.html" target="_blank" style="font-size: 0.85rem; margin-top: 10px; display: inline-block;">Политика конфиденциальности</a> • 
-      <a href="./offer.html" target="_blank" style="font-size: 0.85rem;">Пользовательская оферта</a>
+      Мы используем cookies для улучшения вашего опыта и аналитики. Продолжая использование вы соглашаетесь с 
+      <a href="./policy.html" target="_blank">Политикой конфиденциальности</a> и 
+      <a href="./offer.html" target="_blank">Пользовательской офертой</a>
     </div>
     <button class="cookie-btn" onclick="acceptCookies()">
       Понятно
