Fix cookie banner text alignment and prevent content overflow

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -352,7 +352,11 @@ h2 {
   box-shadow: 0 20px 60px rgba(255, 0, 0, 0.4);
   animation: slideUp 0.4s ease;
   overflow: hidden;
+  overflow-wrap: break-word;
   word-wrap: break-word;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cookie-icon {
@@ -375,11 +379,19 @@ h2 {
   word-wrap: break-word;
   overflow-wrap: break-word;
   hyphens: auto;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .cookie-text p {
   margin: 0 0 12px 0;
   padding: 0;
+  text-align: center;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  max-width: 100%;
+  width: 100%;
 }
 
 .cookie-text p:last-child {
@@ -390,6 +402,8 @@ h2 {
   color: var(--brutal-red);
   text-decoration: underline;
   transition: all 0.3s ease;
+  word-break: break-word;
+  display: inline;
 }
 
 .cookie-text a:hover {
