Fix avatar cutoff: change body alignment to flex-start and add proper padding

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,9 +85,10 @@ body {
   max-width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 20px;
+  align-items: flex-start;
+  padding: 40px 20px 20px 20px;
   overflow-x: hidden;
+  overflow-y: auto;
   position: relative;
 }
 
@@ -97,6 +98,7 @@ body {
   animation: fadeInUp 0.8s ease-out;
   overflow-x: hidden;
   word-wrap: break-word;
+  margin-bottom: 40px;
 }
 
 /* Avatar Section */
@@ -665,7 +667,7 @@ h2 {
 /* Responsive - Мобильная адаптация */
 @media (max-width: 768px) {
   body {
-    padding: 12px;
+    padding: 30px 12px 12px 12px;
   }
 
   .container {
@@ -741,7 +743,7 @@ h2 {
 
 @media (max-width: 480px) {
   body {
-    padding: 8px;
+    padding: 20px 8px 8px 8px;
   }
 
   .container {
@@ -821,7 +823,7 @@ h2 {
 /* Очень маленькие экраны */
 @media (max-width: 360px) {
   body {
-    padding: 6px;
+    padding: 15px 6px 6px 6px;
   }
 
   .container {
