--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,6 +90,6 @@
 </div>
 
 <!-- Scripts -->
-<script src="app.js" defer></script>
+<script src="app.js?v=20260204-2020" defer></script>
 </body>
 </html>
