--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Партнерские ссылки</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 
 <!-- Favicons -->
 <link rel="shortcut icon" type="image/x-icon" href="/tg_miniapps_links/frontend/img/favicon/favicon.ico">
@@ -90,6 +93,6 @@
 </div>
 
 <!-- Scripts -->
-<script src="app.js?v=20260204-2020" defer></script>
+<script src="app.js?v=20260204-2025" defer></script>
 </body>
 </html>
