--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
 <link rel="preload" href="img/img.png" as="image">
 
 <!-- Стили -->
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css?v=20260204-2030">
 
 <!-- DNS Prefetch для API -->
 <link rel="dns-prefetch" href="https://telegram-miniapp-api.worknotdead.workers.dev">
@@ -93,6 +93,6 @@
 </div>
 
 <!-- Scripts -->
-<script src="app.js?v=20260204-2025" defer></script>
+<script src="app.js?v=20260204-2030" defer></script>
 </body>
 </html>
