--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,7 +97,7 @@
   <!-- Footer -->
   <footer class="app-footer">
     <a href="https://t.me/feedback_svr_bot" target="_blank" class="footer-link">
-      разработано нами 🖤
+      🖤 разработано нами 🖤
     </a>
   </footer>
 </div>
