Remove list markers from presentation

--- a/frontend/presentation.html
+++ b/frontend/presentation.html
@@ -116,19 +116,9 @@ ul {
 
 ul li {
   margin: 12px 0;
-  padding-left: 30px;
-  position: relative;
+  padding-left: 0;
   color: var(--text-secondary);
   font-size: 1.05rem;
-}
-
-ul li:before {
-  content: "✓";
-  position: absolute;
-  left: 0;
-  color: var(--primary);
-  font-size: 1.3rem;
-  font-weight: 900;
 }
 
 a {
@@ -412,11 +402,6 @@ hr {
   
   ul li {
     font-size: 0.95rem;
-    padding-left: 25px;
-  }
-  
-  ul li:before {
-    font-size: 1.1rem;
   }
   
   .steps li {
