Add favicons to all pages (presentation, policy, offer)

--- a/frontend/presentation.html
+++ b/frontend/presentation.html
@@ -5,6 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow, noarchive, nosnippet">
 <title>Партнёрам - Околотату</title>
+
+<!-- Favicons -->
+<link rel="shortcut icon" type="image/x-icon" href="/tg_miniapps_links/frontend/img/favicon/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/tg_miniapps_links/frontend/img/favicon/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="/tg_miniapps_links/frontend/img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/tg_miniapps_links/frontend/img/favicon/favicon-32x32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/tg_miniapps_links/frontend/img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/tg_miniapps_links/frontend/img/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/tg_miniapps_links/frontend/img/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="/tg_miniapps_links/frontend/img/favicon/site.webmanifest">
+<meta name="theme-color" content="#000000">
+<meta name="msapplication-TileColor" content="#10b981">
 <style>
 * {
   margin: 0;
