--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
 <link rel="preload" href="img/img.png" as="image">
 
 <!-- Стили -->
-<link rel="stylesheet" href="styles.css?v=20260205-0030">
+<link rel="stylesheet" href="styles.css?v=20260205-0100">
 
 <!-- DNS Prefetch для API -->
 <link rel="dns-prefetch" href="https://telegram-miniapp-api.worknotdead.workers.dev">
@@ -60,6 +60,17 @@
   
   <h1>⚡ Уникальные предложения</h1>
   <h2>От наших партнёров</h2>
+  
+  <!-- Баннер партнёрам -->
+  <a href="./presentation.html" class="partner-banner" target="_blank">
+    <div class="banner-icon">🤝</div>
+    <div class="banner-content">
+      <div class="banner-title">Партнёрам</div>
+      <div class="banner-text">Узнайте как стать партнёром платформы</div>
+    </div>
+    <div class="banner-arrow">→</div>
+  </a>
+  
   <div id="categories"></div>
   
   <button id="adminBtn" class="modern-btn gradient-btn">⚙️ Админ-панель</button>
