--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
 <link rel="preload" href="img/img.png" as="image">
 
 <!-- Стили -->
-<link rel="stylesheet" href="styles.css?v=20260205-0140">
+<link rel="stylesheet" href="styles.css?v=20260205-0150">
 
 <!-- DNS Prefetch для API -->
 <link rel="dns-prefetch" href="https://telegram-miniapp-api.worknotdead.workers.dev">
@@ -65,7 +65,9 @@
   
   <!-- Баннер партнёрам -->
   <a href="./presentation.html" class="partner-banner" target="_blank">
-    <div class="banner-icon">🤝</div>
+    <div class="banner-icon">
+      <img src="img/hand.svg" alt="Partnership" />
+    </div>
     <div class="banner-content">
       <div class="banner-title">Партнёрам</div>
       <div class="banner-text">Узнайте как стать партнёром платформы</div>
