--- a/frontend/presentation.html
+++ b/frontend/presentation.html
@@ -529,11 +529,11 @@ hr {
 
   <h2>Как это работает</h2>
   <ul class="steps">
-    <li>Пользователь заходит в Telegram Mini App Околотату</li>
-    <li>Видит подборку уникальных партнёрских предложений</li>
-    <li>Переходит по ссылке / бот пришлёт уникальный промокод</li>
-    <li>После чего автоматически попадает в базу пользователей</li>
-    <li>В дальнейшем получает предложения через Telegram-бота</li>
+    <li>Пользователь заходит в Telegram Mini App Околотату.</li>
+    <li>Видит подборку уникальных партнёрских предложений.</li>
+    <li>Переходит по ссылке / бот пришлёт уникальный промокод.</li>
+    <li>После чего автоматически попадает в базу пользователей.</li>
+    <li>В дальнейшем получает предложения через Telegram-бота.</li>
   </ul>
   
   <div class="highlight-box">
@@ -545,19 +545,19 @@ hr {
 
   <div class="benefit-grid">
     <div class="benefit-card">
-      <h3>🔗 Уникальносьть</h3>
+      <h3>🔗 Уникальность</h3>
       <ul>
-        <li>легко отслеживать эффективность.</li>
-        <li>высокий уровень доверия к предложениям.</li>
+        <li>Легко отслеживать эффективность.</li>
+        <li>Высокий уровень доверия к предложениям.</li>
       </ul>
     </div>
 
     <div class="benefit-card">
       <h3>📣 Повторный контакт</h3>
       <ul>
-        <li>рассылки через Telegram-бота.</li>
-        <li>напоминания, спецпредложения.</li>
-        <li>возможность «догонять» аудиторию.</li>
+        <li>Рассылки через Telegram-бота.</li>
+        <li>Напоминания, спецпредложения.</li>
+        <li>Возможность «догонять» аудиторию.</li>
       </ul>
       <p><strong>Пользователь не теряется после одного клика.</strong></p>
     </div>
@@ -565,9 +565,9 @@ hr {
     <div class="benefit-card">
       <h3>🎯 Живая аудитория</h3>
       <ul>
-        <li>тату-мастера.</li>
-        <li>клиенты тату-студий.</li>
-        <li>люди, интересующиеся культурой и индустрией.</li>
+        <li>Тату-мастера.</li>
+        <li>Клиенты тату-студий.</li>
+        <li>Люди, интересующиеся культурой и индустрией.</li>
       </ul>
       <p>Без случайного трафика и «холодных» показов.</p>
     </div>
@@ -575,9 +575,9 @@ hr {
     <div class="benefit-card">
       <h3>📊 Прозрачная аналитика</h3>
       <ul>
-        <li>учёт переходов и активности.</li>
-        <li>централизованная база пользователей.</li>
-        <li>удобно считать эффективность.</li>
+        <li>Учёт переходов и активности.</li>
+        <li>Централизованная база пользователей.</li>
+        <li>Удобно считать эффективность.</li>
       </ul>
     </div>
   </div>
@@ -585,20 +585,20 @@ hr {
 
   <h2>Кому подходит партнёрство</h2>
   <ul>
-    <li>тату-студии и мастера.</li>
-    <li>бренды расходников и оборудования.</li>
-    <li>бренды косметики по уходу за тату.</li>
-    <li>фестивали, мероприятия, образовательные мероприятия.</li>
-    <li>сервисы и платформы тату-индустрии.</li>
+    <li>Тату-студии и мастера.</li>
+    <li>Бренды расходников и оборудования.</li>
+    <li>Бренды косметики по уходу за тату.</li>
+    <li>Фестивали, мероприятия, образовательные проекты.</li>
+    <li>Сервисы и платформы тату-индустрии.</li>
   </ul>
   <hr>
 
   <h2>Форматы сотрудничества</h2>
   <ul>
-    <li>размещение предложения в Mini App.</li>
-    <li>пакетное размещение.</li>
-    <li>рассылки по базе пользователей.</li>
-    <li>спецпроекты под задачи партнёра.</li>
+    <li>Размещение предложения в Mini App.</li>
+    <li>Пакетное размещение.</li>
+    <li>Рассылки по базе пользователей.</li>
+    <li>Спецпроекты под задачи партнёра.</li>
   </ul>
   <p style="margin-top: 20px;"><strong>Формат подбирается индивидуально — под продукт и цель.</strong></p>
   <hr>
@@ -606,9 +606,9 @@ hr {
   <h2>Что важно понимать</h2>
   <ul>
     <li><a href="https://t.me/nononotattoo" target="_blank">Околотату</a> не является посредником в сделках.</li>
-    <li>мы не принимаем оплату за товары и услуги партнёров.</li>
-    <li>ответственность за предложения несёт партнёр.</li>
-    <li>мы предоставляем платформу и аудиторию.</li>
+    <li>Мы не принимаем оплату за товары и услуги партнёров.</li>
+    <li>Ответственность за предложения несёт партнёр.</li>
+    <li>Мы предоставляем платформу и аудиторию.</li>
   </ul>
   <hr>
 
