Update presentation content with revised text

--- a/frontend/presentation.html
+++ b/frontend/presentation.html
@@ -519,21 +519,21 @@ hr {
 
 <div class="container">
   <h1><img src="img/hand.svg" alt="Partnership" class="title-icon"> Партнёрам</h1>
-  <p class="subtitle">Приложение <a href="https://t.me/nononotattoo" target="_blank">Околотату</a></p>
+  <p class="subtitle">Наш <a href="https://t.me/nononotattoo" target="_blank">telegram mini app</a></p>
 
-  <h2>Что такое «Околотату»</h2>
-  <p><a href="https://t.me/nononotattoo" target="_blank">Околотату</a> — это Telegram-платформа для работы с тату-аудиторией через Mini App и Telegram-бота.</p>
+  <h2>Как работает наше приложение</h2>
+  <p><a href="https://t.me/nononotattoo" target="_blank">Mini app</a> — это Telegram-платформа для работы с тату-аудиторией через Mini App и Telegram-бота.</p>
   <p>Мы не продаём «охваты» и «посты».<br>
   Мы даём <strong>прямой доступ к живой аудитории</strong> и возможность <strong>возвращаться к пользователю повторно</strong>.</p>
   <hr>
 
   <h2>Как это работает</h2>
   <ul class="steps">
-    <li>Пользователь заходит в Telegram Mini App Околотату.</li>
+    <li>Пользователь заходит в Telegram Mini App.</li>
     <li>Видит подборку уникальных партнёрских предложений.</li>
     <li>Переходит по ссылке / бот пришлёт уникальный промокод.</li>
     <li>После чего автоматически попадает в базу пользователей.</li>
-    <li>В дальнейшем получает предложения через Telegram-бота.</li>
+    <li>В дальнейшем получает персонализированные предложения через Telegram-бота.</li>
   </ul>
   
   <div class="highlight-box">
