Move bot restart box below links with liquid glass style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,16 +61,6 @@
   <h1>⚡ Уникальные предложения</h1>
   <h2>От наших партнёров</h2>
   
-  <!-- Информация о промокодах -->
-  <div class="glass-card" style="margin-bottom: 20px; text-align: center;">
-    <p style="margin: 0 0 15px 0; color: var(--text-secondary); font-size: 0.95rem;">
-      💡 Если промокод не приходит, перезапустите бота
-    </p>
-    <a href="https://t.me/my_test_min_app_bot" target="_blank" class="modern-btn" style="text-decoration: none; display: inline-flex; background: linear-gradient(135deg, #00FF00 0%, #008000 100%);">
-      🔄 Перезапустить бота
-    </a>
-  </div>
-  
   <div id="categories"></div>
   
   <button id="adminBtn" class="modern-btn gradient-btn">⚙️ Админ-панель</button>
@@ -132,6 +122,17 @@
       </a>
     </div>
   </social>
+  
+  <!-- Информация о промокодах -->
+  <div class="promo-restart-box">
+    <div class="promo-restart-icon">💡</div>
+    <p class="promo-restart-text">
+      Если промокод не приходит, перезапустите бота
+    </p>
+    <a href="https://t.me/my_test_min_app_bot" target="_blank" class="promo-restart-btn">
+      🔄 Перезапустить бота
+    </a>
+  </div>
   
   <!-- Баннер партнёрам -->
   <a href="./presentation.html" class="partner-banner">
