Remove emoji and simplify restart button text

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,12 +125,11 @@
   
   <!-- Информация о промокодах -->
   <div class="promo-restart-box">
-    <div class="promo-restart-icon">💡</div>
     <p class="promo-restart-text">
       Если промокод не приходит
     </p>
     <a href="https://t.me/my_test_min_app_bot" target="_blank" class="promo-restart-btn">
-      🔄 Перезапустить бота
+      🔄 Перезапустите бот
     </a>
   </div>
   
